--- a/okd.yml
+++ b/okd.yml
@@ -4,6 +4,16 @@
   user: root
 
   roles:
-    - {role: 'common', tags: 'common'}
+    - { role: "common", tags: "common" }
 
- 
+
+
+# export DOMAIN=k8s-monkey.ch
+# export USERNAME=admin
+# export PASSWORD=admin
+
+
+# curl https://raw.githubusercontent.com/marzelwidmer/installcentos/wip/install-openshift.sh | INTERACTIVE=false /bin/bash
+
+#   environment:
+#     http_proxy: http://proxy.example.com:8080
