--- a/roles/common/defaults/main.yml
+++ b/roles/common/defaults/main.yml
@@ -7,7 +7,10 @@ os_environment:
   - key: PASSWORD 
     value : admin
 
-
+  # - key: DJANGO_SETTINGS_MODULE 
+  #   value : websec.prod_settings  
+  # - key: DJANGO_SUPER_USER 
+  #   value : admin
  
 
 
