--- a/okd.yml
+++ b/okd.yml
@@ -2,7 +2,12 @@
 - name: apply common configuration to all nodes
   hosts: hetzner-vm
   user: root
+  become: yes
+  gather_facts: no
+  vars: 
+    - okd_domain: "<YOUR_DOMAIN>"
+    - okd_admin_username: "<YOUR_ADMIN_USER>"
+    - okd_admin_password: "<YOUR_ADMIN_USER_PASSWORD>"
 
   roles:
     - { role: "common", tags: "common" }
-
