--- a/okd.yml
+++ b/okd.yml
@@ -5,9 +5,9 @@
   become: yes
   gather_facts: no
   vars: 
-    - okd_domain: "<YOUR_DOMAIN>"
-    - okd_admin_username: "<YOUR_ADMIN_USER>"
-    - okd_admin_password: "<YOUR_ADMIN_USER_PASSWORD>"
+    - okd_domain: "YOUR_DOMAIN"
+    - okd_admin_username: "YOUR_ADMIN_USER"
+    - okd_admin_password: "YOUR_ADMIN_USER_PASSWORD"
 
   roles:
     - { role: "common", tags: "common" }
