--- a/okd.yml
+++ b/okd.yml
@@ -8,6 +8,7 @@
     - okd_domain: "YOUR_DOMAIN"
     - okd_admin_username: "YOUR_ADMIN_USER"
     - okd_admin_password: "YOUR_ADMIN_USER_PASSWORD"
+    - okd_api_port: "8443"
 
   roles:
     - { role: "common", tags: "common" }
