--- a/okd.yml
+++ b/okd.yml
@@ -5,9 +5,9 @@
   become: yes
   gather_facts: no
   vars:
-    - okd_domain: "c3smonkey.ch"
-    - okd_admin_username: "monkey"
-    - okd_admin_password: "monkeyPassword"
+    - okd_domain: "DOMAIN.ch"
+    - okd_admin_username: "USER"
+    - okd_admin_password: "PASSWORD"
     - okd_api_port: "8443"
 
   roles:
